--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,20 @@
 body{
-    margin: 0;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
-
-
 .foto {
     background-image: url(img/banner-2.jpg);
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     color:white;
     background-size: scale;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
     background-position: center;
-    padding-top: 0%;
     text-align: center;
-    font-family: 'Inter', sans-serif;
     font-size: 40px;
     color: black;
-    
-    }
+ }
 .row{
     display: flex;
     flex-direction: row;
@@ -33,7 +28,7 @@ body{
 .columna100{
     width: 100%;
     text-align: center;
-    }
+}
 .column-6{
     width: 25%;
     margin-left: auto;
@@ -50,6 +45,12 @@ body{
 .columna101{
     width: 100%;
     text-align: center;
-    font-size: 50px;
+    font-size: 40px;
     background-color: rgb(87, 127, 226);
-    }
+}
+.columna3{
+    width: 33.33%;
+    color: white;
+    background-color: black;
+    font-family: monospace;
+}
