--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 .foto {
-    background-image: url(img/banner-2.jpg);
+    background-image: url(../img/banner-2.jpg);
     width: 100%;
     height: 100vh;
     color:white;
@@ -14,6 +14,9 @@ body{
     text-align: center;
     font-size: 40px;
     color: black;
+    display: block;
+    margin: 0px;
+    position: relative; text-align: center
  }
 .row{
     display: flex;
@@ -33,6 +36,8 @@ body{
     width: 25%;
     margin-left: auto;
     font-size: 30px;
+    
+    margin: 0 auto; 
 }
 .estilos{
     border-style: solid;
@@ -54,3 +59,21 @@ body{
     background-color: black;
     font-family: monospace;
 }
+.margen{
+    position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
+    font-size: 50px;
+}
+@media screen and (max-width: 700px) {
+ .columna1{
+    width: 100%;
+ }
+ .column-6{
+    width: 50%;
+ }
+ .columna1{
+    width: 100%;
+ }
+ .column-6{
+    width: 50%;
+ }
+  }
