--- a/css/styles.css
+++ b/css/styles.css
@@ -31,13 +31,15 @@ body{
 .columna100{
     width: 100%;
     text-align: center;
+    font-size: 30px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .column-6{
     width: 25%;
     margin-left: auto;
-    font-size: 30px;
-    
+    font-size: 20px;
     margin: 0 auto; 
+    text-align: center;
 }
 .estilos{
     border-style: solid;
@@ -58,10 +60,26 @@ body{
     color: white;
     background-color: black;
     font-family: monospace;
+    text-align: center;
 }
 .margen{
     position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
-    font-size: 50px;
+    font-size: 80px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.columna3-1{
+    width: 33.33%;
+    color: white;
+    background-color: black;
+    font-family: monospace;
+    text-align: center;
+}
+.columna3-2{
+    width: 33.33%;
+    color: white;
+    background-color: black;
+    font-family: monospace;
+    text-align: right;
 }
 @media screen and (max-width: 700px) {
  .columna1{
@@ -76,4 +94,23 @@ body{
  .column-6{
     width: 50%;
  }
+ .columna3-1{
+    width: 100%;
+ }
+ .columna3{
+    width: 50%;
+ }
+ .img1{
+    width: 250px;
+ }
+ .img2{
+    width: 250px;
+ }
+ .img3{
+    width: 250px;
+ }
+ .img4{
+    width: 250px;
+ }
+
   }
